add tegs with attrubutes

--- a/index.html
+++ b/index.html
@@ -22,9 +22,25 @@
             <Li>labrador</Li>
         </ol>
     </li>
-    <li>Cat</li>
-    <li>Horse</li>
+    <li>Cat
+        <img src="./images/cat.jpg" width="300px">
+
+    </li>
+    <li>Horse
+
+        <img src="https://images.unsplash.com/uploads/14136148007774dc82563/ce92d553?q=80&w=1946&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="300px">
+    </li>
 </ul>
+
+<div>
+    <h2>Question 3</h2>
+    <p>Ceate a link to where you want</p>
+    <p> -->
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Coder Acadamy</a>
+
+    </p>
+    </div>
+
 
 </body>
 
