different wats of using CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <!--This is a head comment tag-->
 <head>
 <title>HTML Basics</title>
+<!-- using a style tag inside head -->
+<style> 
+    h2 {color: bisque; background-color: blueviolet;}
+</style>
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
-<h1>Notes</h1>
+    <!-- inline styling -->
+<h1 style="color: red; background-color: blue;">Notes</h1>
 <h2>Question one</h2>
 <p>paragraph - what is html?</p>
 <p>-->Html is a markup language</p>
@@ -23,12 +29,12 @@
         </ol>
     </li>
     <li>Cat
-        <img src="./images/cat.jpg" width="300px">
+        <img src="./images/cat.jpg">
 
     </li>
     <li>Horse
 
-        <img src="https://images.unsplash.com/uploads/14136148007774dc82563/ce92d553?q=80&w=1946&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" width="300px">
+        <img src="https://images.unsplash.com/uploads/14136148007774dc82563/ce92d553?q=80&w=1946&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     </li>
 </ul>
 
