add classes for styling

--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
 <style> 
     h2 {color: bisque; background-color: blueviolet;}
 </style>
+<!-- external CCS file -->
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <!-- inline styling -->
+    <!-- inline styling (highest priority) -->
 <h1 style="color: red; background-color: blue;">Notes</h1>
 <h2>Question one</h2>
-<p>paragraph - what is html?</p>
-<p>-->Html is a markup language</p>
+
+<p class="question"p>paragraph - what is html?</p>
+<p class="answer">-->Html is a markup language</p>
 
 <h2>Question two</h2>
-<p>List some animals</p>
-<p>--> here are some animals:</p>
+<p class="question">List some animals</p>
+<p class="answer">--> here are some animals:</p>
 <ul>
     <li>
         Dog
@@ -40,8 +42,8 @@
 
 <div>
     <h2>Question 3</h2>
-    <p>Ceate a link to where you want</p>
-    <p> -->
+    <p class="question">Ceate a link to where you want</p>
+    <p class="answer"> -->
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Coder Acadamy</a>
 
     </p>
