--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <div class="welcome">Welcome to my notes</div>
     <!-- inline styling (highest priority) -->
 <h1 style="color: red; background-color: blue;">Notes</h1>
 <h2>Question one</h2>
