different positioning in CSS

--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="welcome">Welcome to my notes</div>
+    
     <!-- inline styling (highest priority) -->
 <h1 style="color: red; background-color: blue;">Notes</h1>
 <h2>Question one</h2>
 
 <p class="question"p>paragraph - what is html?</p>
 <p class="answer">-->Html is a markup language</p>
+
+<div class="welcome">
+    <ul>
+        <li>Home</li>
+        <li>Contact us</li>
+    </ul>
+</div>
 
 <h2>Question two</h2>
 <p class="question">List some animals</p>
@@ -51,6 +58,9 @@
     </p>
     </div>
 
+    <div class="parent">
+        <div class="child">child</div>
+    </div>
 
 </body>
 
